[gd_scene load_steps=11 format=3 uid="uid://cass2bjp3d6eq"]

[ext_resource type="PackedScene" uid="uid://bp53g1jmqlap" path="res://scenes/player/Player.tscn" id="1_2xv6m"]
[ext_resource type="Script" uid="uid://dswbwl8o4vfsd" path="res://scripts/Game/game_handler.gd" id="1_eaqps"]
[ext_resource type="Script" uid="uid://dgayqf5bjeouf" path="res://scripts/item/item_handler.gd" id="1_p3mrr"]
[ext_resource type="PackedScene" uid="uid://hgrksmummwv0" path="res://scenes/ui/MainUI.tscn" id="2_a8oao"]
[ext_resource type="Script" uid="uid://blaauerf105us" path="res://scripts/Game/interactable_handler.gd" id="2_nlyqa"]
[ext_resource type="PackedScene" uid="uid://c8ni7apwy8dyx" path="res://scenes/objects/Interactables/Crate.tscn" id="3_ld3e5"]
[ext_resource type="Texture2D" uid="uid://dmnuc1rmciuv3" path="res://assets/textures/kenney_borders/default/Border/panel-border-014.png" id="3_mnjbh"]
[ext_resource type="Theme" uid="uid://b7phgjo3xdlh0" path="res://resources/font.tres" id="3_oxogg"]
[ext_resource type="Script" path="res://scripts/enemy/Areas/enemy_handler.gd" id="4_omi12"]
[ext_resource type="PackedScene" uid="uid://bwmc16eui1kh1" path="res://scenes/ui/TemplateButton.tscn" id="5_c5e5s"]

[node name="Base" type="Node2D"]
y_sort_enabled = true

[node name="GameHandler" type="Node" parent="."]
script = ExtResource("1_eaqps")

[node name="CanvasLayer" type="CanvasLayer" parent="GameHandler"]
visible = false

[node name="FadeToBlack" type="ColorRect" parent="GameHandler/CanvasLayer"]
z_index = 100
offset_right = 5000.0
offset_bottom = 4000.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MainUI" parent="GameHandler/CanvasLayer" instance=ExtResource("2_a8oao")]

[node name="CanvasLayer2" type="CanvasLayer" parent="GameHandler"]
layer = 2
visible = false

[node name="EndgameUI" type="ColorRect" parent="GameHandler/CanvasLayer2"]
z_index = 101
custom_minimum_size = Vector2(20, 20)
offset_left = 342.0
offset_top = 140.0
offset_right = 909.0
offset_bottom = 541.0
color = Color(0, 0, 0, 0.839216)

[node name="Label" type="Label" parent="GameHandler/CanvasLayer2/EndgameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -84.5
offset_right = 112.5
offset_bottom = -24.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_oxogg")
theme_override_font_sizes/font_size = 50
text = "Survived"
horizontal_alignment = 1

[node name="HealthBarBorder" type="NinePatchRect" parent="GameHandler/CanvasLayer2/EndgameUI"]
self_modulate = Color(0.596078, 0.458824, 0.329412, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mnjbh")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="EndgameTitleButton" parent="GameHandler/CanvasLayer2/EndgameUI" instance=ExtResource("5_c5e5s")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 107.5
offset_right = 160.0
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
text = "Return to title"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="GameHandler"]
process_mode = 3
bus = &"Music"

[node name="ItemHandler" type="Node" parent="." groups=["ItemHandler"]]
script = ExtResource("1_p3mrr")

[node name="EnemyHandler" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("4_omi12")
min_spawns_per_area = null
max_spawns_per_area = null

[node name="SpawnAreas" type="Node" parent="EnemyHandler"]

[node name="Lighting" type="Node" parent="."]

[node name="Dark" type="CanvasModulate" parent="Lighting"]
visible = false
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." groups=["navigation"]]
y_sort_enabled = true

[node name="Map" type="Node2D" parent="NavigationRegion2D"]
y_sort_enabled = true

[node name="InteractableHandler" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("2_nlyqa")
chest_scene = ExtResource("3_ld3e5")

[node name="InteractableSpawnPoints" type="Node" parent="InteractableHandler"]

[node name="InteractableHolder" type="Node2D" parent="InteractableHandler"]
y_sort_enabled = true

[node name="Player" parent="." instance=ExtResource("1_2xv6m")]
position = Vector2(533, 480)

[connection signal="pressed" from="GameHandler/CanvasLayer2/EndgameUI/EndgameTitleButton" to="GameHandler" method="_on_endgame_title_button_pressed"]
[connection signal="channel_complete" from="Player" to="GameHandler" method="_on_player_channel_complete"]
[connection signal="death" from="Player" to="GameHandler" method="_on_player_death"]
